--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Rajdhani:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/main.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
