--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
         </h2>
 
         <div class="accordion">
+
           <div class="accordion__item">
             <button class="accordion__btn" type="button">
               <h3 class="accordion__title">
@@ -379,6 +380,54 @@
               </svg>
             </button>
 
+            <p class="accordion__info">
+              The stormy waters of the IT ocean are full of obstacles and
+              challenges 👻 However, captain VSYS is an experienced sea wolf;
+              when it comes to illegitimate legal abuse, volumetric DDoS attack,
+              or hardware/software failure - all of them pirate attacks are
+              always bounced off VSYS's shield! Your data is fully protected on
+              the board of our privately owned hardware sailing in certified
+              safeguarded and well-sheltered datacenters in the safe harbor of
+              offshore locations. Your privacy is prioritized and respected - no
+              personal information is required and hence can't be possibly
+              shared. Bitcoin and crypto payments are welcomed and accepted. 👍
+            </p>
+          </div>
+
+          <div class="accordion__item">
+            <button class="accordion__btn" type="button">
+              <h3 class="accordion__title">
+                WHY CHOOSE VSYS AS OFFSHORE HOSTER? 🤔
+              </h3>
+              <svg class="accordion__arrow" width="18px" height="10px">
+                <use href="/images/icons.svg#accordion-arrow"></use>
+              </svg>
+            </button>
+          
+            <p class="accordion__info">
+              The stormy waters of the IT ocean are full of obstacles and
+              challenges 👻 However, captain VSYS is an experienced sea wolf;
+              when it comes to illegitimate legal abuse, volumetric DDoS attack,
+              or hardware/software failure - all of them pirate attacks are
+              always bounced off VSYS's shield! Your data is fully protected on
+              the board of our privately owned hardware sailing in certified
+              safeguarded and well-sheltered datacenters in the safe harbor of
+              offshore locations. Your privacy is prioritized and respected - no
+              personal information is required and hence can't be possibly
+              shared. Bitcoin and crypto payments are welcomed and accepted. 👍
+            </p>
+          </div>
+
+          <div class="accordion__item">
+            <button class="accordion__btn" type="button">
+              <h3 class="accordion__title">
+                WHY CHOOSE VSYS AS OFFSHORE HOSTER? 🤔
+              </h3>
+              <svg class="accordion__arrow" width="18px" height="10px">
+                <use href="/images/icons.svg#accordion-arrow"></use>
+              </svg>
+            </button>
+          
             <p class="accordion__info">
               The stormy waters of the IT ocean are full of obstacles and
               challenges 👻 However, captain VSYS is an experienced sea wolf;
